--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
-    "react": "^18.2.0"
+    "method-override": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
